# cut-the-red-tape

./: CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/include/: engine.hpp
engine/include/engine/: draw.hpp  graphics.hpp  math.hpp
engine/include/glad/: glad.h
engine/src/: engine.cpp
engine/src/engine/: draw.cpp  general.cpp  graphics.cpp  math.cpp
engine/src/glad/: glad.c
game/: CMakeLists.txt
game/src/: main.cpp
src/: main.cpp
